--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -21,7 +21,7 @@ const blog = await getBlogDetail(blogId as string);
 <Layout content={{
     title: blog.title,
     description: blog.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'').length > 100 ? blog.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'').slice(0,101) + '...' : blog.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,''),
-    heroImage: blog.eyecatch?.url ?? '',
+    heroImage: blog.eyecatch?.url + '?fit=fill&w=720&h=360' ?? '',
     pubDate: new Date(blog.publishedAt).toLocaleString('ja-JP',{ timeZone: 'Asia/Tokyo' }),
     updatedDate: new Date(blog.updatedAt).toLocaleString('ja-JP',{ timeZone: 'Asia/Tokyo' }),
     categoryId: blog.category.id ?? '',
