--- a/src/components/SearchForm.astro
+++ b/src/components/SearchForm.astro
@@ -1,7 +1,7 @@
 <div class="searchform">
     <form action="/search" method="get">
-        <label for="q">サイト内検索</label>
-        <input type="text" name="q" class="searchform-text">
+        <label for="searchform-text">サイト内検索</label>
+        <input id="searchform-text" type="text" name="q" class="searchform-text">
         <input type="submit" value="検索" class="searchform-submit">
     </form>
 </div>
