changed basehead card image size

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -44,7 +44,7 @@ const { title, description, image = import.meta.env.CARD_IMAGE } = Astro.props;
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <!-- <meta property="og:image" content={new URL(image, Astro.url)} /> -->
-<meta property="og:image" content={image} />
+<meta property="og:image" content={`${image}?fit=crop&crop=top&w=720&h=360`} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
@@ -52,4 +52,4 @@ const { title, description, image = import.meta.env.CARD_IMAGE } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <!-- <meta property="twitter:image" content={new URL(image, Astro.url)} /> -->
-<meta property="twitter:image" content={image} />
+<meta property="twitter:image" content={`${image}?fit=crop&crop=top&w=720&h=360`} />
