--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -8,7 +8,7 @@ const { contents: links } = await getLinks({fields: ["createdAt","title","url"],
 ---
 <div class="sidebar">
     <nav>
-        <SearchForm />
+        <SearchForm searchform_text_id="sidebar_searchform_text"/>
         <div class="sidebar_private_links">            
             <ul class="">
                 <li><a href="/about">プライバシーポリシー</a></li>
