--- a/src/pages/search/index.astro
+++ b/src/pages/search/index.astro
@@ -3,8 +3,8 @@ import BaseHead from '../../components/BaseHead.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 import Sidebar from '../../components/Sidebar.astro';
-// import SearchResult from '../../components/SearchResult';
-import SearchResult from '../../components/SearchResult.vue';
+// import SearchResult from '../../components/SearchResult.vue';
+import SearchResult from '../../components/SearchResult';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../config';
 
 // //microCMS呼び出し
@@ -50,7 +50,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../config';
 		<main class="main">
 			<Sidebar></Sidebar>
 			<section class="contents">
-				<SearchResult client:only="vue"/>
+				<!-- <SearchResult client:only="vue"/> -->
+				<SearchResult client:only="preact"/>
 			</section>
 		</main>
 		<Footer />
