--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -3,6 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Sidebar from '../components/Sidebar.astro';
+import Posts from '../components/Posts.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 
 //microCMS呼び出し
@@ -49,26 +50,7 @@ const { page } = Astro.props;
 		<main class="main">
 			<Sidebar></Sidebar>
 			<section class="contents">
-				<div>
-					{
-						page.data.map((post:any) => (
-						// posts.map((post) => (
-							<div class="post">
-								{post.eyecatch && <a href={`/posts/${post.id}`} aria-label="記事へ進む"><img width={720} height={360} src={`${post.eyecatch.url}?fit=crop&crop=top&w=720&h=360`} alt="" /></a>}
-								<span class="published_time_span">
-									<time datetime={post.publishedAt}>
-										{new Date(post.publishedAt).toLocaleString('ja-JP',{ timeZone: 'Asia/Tokyo' })}
-									</time>
-								</span>
-								{post.category && <span class="category"><a href={`/category/${post.category.id}`}>{post.category.name}</a></span>}							
-								<a href={`/posts/${post.id}`}>
-									<h2>{post.title}</h2>
-									<div class="description">{post.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'').length > 100 ? post.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'').slice(0,101) + '...' : post.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'')}</div>
-								</a>
-							</div>
-						))
-					}
-				</div>
+				<Posts posts={page}/>
 				{page.url.prev ? <a href={page.url.prev}>Previous</a> : page.url.current === '' ? null : <a href="/">Previous</a>}
 				{page.url.next ? <a href={page.url.next}>Next</a> : null}
 			</section>
