--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -27,6 +27,9 @@ const { title, description, image = import.meta.env.CARD_IMAGE } = Astro.props;
   gtag('config', 'G-0M4H6RV722');
 </script>
 
+<!-- Google Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9621814408753320" crossorigin="anonymous"></script>
+
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
