--- a/src/pages/category/[categoryId]/[...page].astro
+++ b/src/pages/category/[categoryId]/[...page].astro
@@ -4,6 +4,7 @@ import Header from '../../../components/Header.astro';
 import Footer from '../../../components/Footer.astro';
 import Sidebar from '../../../components/Sidebar.astro';
 import Posts from '../../../components/Posts.astro';
+import GoogleResponsiveAd from '../../../components/GoogleResponsiveAd';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../../config';
 
 //microCMS呼び出し
@@ -79,6 +80,7 @@ const category = await getCategoryDetail(params.categoryId as string);
 				<Posts posts={page}/>
 				{page.url.prev ? <a href={page.url.prev}>Previous</a> : null}
 				{page.url.next ? <a href={page.url.next}>Next</a> : null}
+				<GoogleResponsiveAd client:only="preact"/>
 			</section>
 		</main>
 		<Footer />
