--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -4,6 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Sidebar from '../components/Sidebar.astro';
 import Posts from '../components/Posts.astro';
+import GoogleResponsiveAd from '../components/GoogleResponsiveAd';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 
 //microCMS呼び出し
@@ -53,6 +54,7 @@ const { page } = Astro.props;
 				<Posts posts={page}/>
 				{page.url.prev ? <a href={page.url.prev}>Previous</a> : page.url.current === '' ? null : <a href="/">Previous</a>}
 				{page.url.next ? <a href={page.url.next}>Next</a> : null}
+				<GoogleResponsiveAd client:only="preact"/>
 			</section>
 		</main>
 		<Footer />
