--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -44,5 +44,5 @@ const { contents: links } = await getLinks({fields: ["createdAt","title","url"],
             </ul>
         </div>
     </nav>
-    <GoogleResponsiveAd client:only="preact"/>
+    <!-- <GoogleResponsiveAd client:only="preact"/> -->
 </div>
