--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -54,7 +54,7 @@ const { page } = Astro.props;
 				<Posts posts={page}/>
 				{page.url.prev ? <a href={page.url.prev}>Previous</a> : page.url.current === '' ? null : <a href="/">Previous</a>}
 				{page.url.next ? <a href={page.url.next}>Next</a> : null}
-				<GoogleResponsiveAd client:only="preact"/>
+				<!-- <GoogleResponsiveAd client:only="preact"/> -->
 			</section>
 		</main>
 		<Footer />
