--- a/src/pages/category/[categoryId]/[...page].astro
+++ b/src/pages/category/[categoryId]/[...page].astro
@@ -80,7 +80,7 @@ const category = await getCategoryDetail(params.categoryId as string);
 				<Posts posts={page}/>
 				{page.url.prev ? <a href={page.url.prev}>Previous</a> : null}
 				{page.url.next ? <a href={page.url.next}>Next</a> : null}
-				<GoogleResponsiveAd client:only="preact"/>
+				<!-- <GoogleResponsiveAd client:only="preact"/> -->
 			</section>
 		</main>
 		<Footer />
