--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -29,13 +29,13 @@ const blog = await getBlogDetail(blogId as string);
     categoryId: blog.category.id ?? '',
     categoryName: blog.category.name ?? '',
 }}>
-  <GoogleResponsiveAd client:only="preact"/>
+  <!-- <GoogleResponsiveAd client:only="preact"/> -->
   <main set:html={processer(blog.content, { img: { parameters: { fm: 'webp' } } })} />
   <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">
     Tweet
   </a>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  <GoogleResponsiveAd client:only="preact"/>
+  <!-- <GoogleResponsiveAd client:only="preact"/> -->
 </Layout>
 <script>
   import "lazysizes";
