preview p.astro en to ja

--- a/src/pages/preview.astro
+++ b/src/pages/preview.astro
@@ -7,7 +7,7 @@ import Footer from "../components/Footer.astro";
 import BlogPreview from "../components/BlogPreview";
 ---
 
-<html lang="en">
+<html lang="ja">
 	<head>
 		<BaseHead title="" description="" />
 		<style>
