change basehead and preview

--- a/src/pages/preview.astro
+++ b/src/pages/preview.astro
@@ -1,5 +1,4 @@
 ---
-import Layout from "../layouts/BlogPost.astro";
 import BaseHead from "../components/BaseHead.astro";
 import Sidebar from "../components/Sidebar.astro";
 import Header from "../components/Header.astro";
@@ -9,7 +8,7 @@ import BlogPreview from "../components/BlogPreview";
 
 <html lang="ja">
 	<head>
-		<BaseHead title="" description="" />
+		<BaseHead title="" description="" robots="noindex" />
 		<style>
 			.title {
 				font-size: 2em;
