--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -7,12 +7,13 @@ export interface Props {
 	title: string;
 	description: string;
 	image?: string;
+  robots?: string;
 }
 
-const { title, description, image = import.meta.env.CARD_IMAGE } = Astro.props;
+const { title, description, image = import.meta.env.CARD_IMAGE, robots = "index, follow" } = Astro.props;
 ---
 <!-- The next line enables the indexing by robots on the page level -->
-<meta name="robots" content="index, follow" />
+<meta name="robots" content={robots} />
 
 <!-- Google tag (gtag.js) -->
 <script
