--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -55,9 +55,12 @@ const {
 				<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">
 					Tweet
 				</a>
-				<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				<hr />
 				<slot />
+				<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">
+					Tweet
+				</a>
+				<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</article>
 		</main>
 		<Footer />
