--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -6,7 +6,7 @@ const { posts } = Astro.props;
         posts.data.map((post:any) => (
         // posts.map((post) => (
             <div class="post">
-                {post.eyecatch && <a href={`/posts/${post.id}`} aria-label="記事へ進む"><img width={720} height={360} src={`${post.eyecatch.url}?fit=crop&crop=top&w=720&h=360&fm=webp`} alt="" /></a>}
+                {post.eyecatch && <a href={`/posts/${post.id}`} aria-label="記事へ進む"><img width={720} height={360} data-src={`${post.eyecatch.url}?fit=crop&crop=top&w=720&h=360&fm=webp`} alt="" class="lazyload"/></a>}
                 <span class="published_time_span">
                     <time datetime={post.publishedAt}>
                         {new Date(post.publishedAt).toLocaleString('ja-JP',{ timeZone: 'Asia/Tokyo' })}
@@ -21,3 +21,6 @@ const { posts } = Astro.props;
         ))
     }
 </div>
+<script>
+  import "lazysizes";
+</script>
