--- a/src/components/PreloadFirstPostEyecatch.astro
+++ b/src/components/PreloadFirstPostEyecatch.astro
@@ -3,6 +3,6 @@ const { posts } = Astro.props;
 ---
 {
     posts.map((post:any,index:number) => (
-        post.eyecatch && index === 0 ? <link rel="preload" as="image" href={`${post.eyecatch.url}?fm=webp&fit=crop&crop=top&w=720&h=360`} /> :  null 
+        post.eyecatch && index === 0 || index === 1 ? <link rel="preload" as="image" href={`${post.eyecatch.url}?fm=webp&fit=crop&crop=top&w=720&h=360`} /> :  null 
     ))
 }
