--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -34,6 +34,7 @@ const {
 				margin: 1rem 0;
 			}
 		</style>
+		{heroImage && <link rel="preload" as="image" href={heroImage} />}
 	</head>
 
 	<body>
@@ -41,7 +42,7 @@ const {
 		<main class="main">
 			<Sidebar></Sidebar>
 			<article class="contents">
-				{heroImage && <img width={720} height={360} data-src={heroImage} alt="" class="lazyload"/>}
+				{heroImage && <img width={720} height={360} src={heroImage} alt=""/>}
 				<h1 class="title">{title}</h1>
 				{pubDate && <time>{pubDate}</time>}
 				{
