disable BlogPost eyecatch preload

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -34,7 +34,7 @@ const {
 				margin: 1rem 0;
 			}
 		</style>
-		{heroImage && <link rel="preload" as="image" href={heroImage} />}
+		<!-- {heroImage && <link rel="preload" as="image" href={heroImage} />} -->
 	</head>
 
 	<body>
