fixed wavebox logo

--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -33,7 +33,7 @@ const blog = await getBlogDetail(blogId as string);
   <main set:html={processer(blog.content, { img: { parameters: { fm: 'webp' } } })} />
   <div id="wavebox" class="wavebox">
         <p>もしこの投稿が「いいね！」と思ったら↓から拍手をください</p>
-        <a href="https://wavebox.me/wave/9yprnt1ii7tatpb8/"><img width="100" src="../../../public/logo_symbol_black.png" /></a>
+        <a href="https://wavebox.me/wave/9yprnt1ii7tatpb8/"><img width="100" src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/7ae13f9a38be4db3b40ac2166607885a/logo_symbol_black.png?fm=webp" /></a>
   </div>
   <!-- <GoogleResponsiveAd client:only="preact"/> -->
 </Layout>
