--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -33,7 +33,7 @@ const blog = await getBlogDetail(blogId as string);
     <main set:html={processer(blog.content, { img: { parameters: { fm: 'webp' } } })} />
     <div id="wavebox" class="wavebox">
         <p>もしこの投稿が「いいね！」と思ったら↓から拍手をください</p>
-        <a href="https://wavebox.me/wave/9yprnt1ii7tatpb8/"><img width="100" height="40" alt="wavebox logo" src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/7ae13f9a38be4db3b40ac2166607885a/logo_symbol_black.png?fm=webp&w=100" /></a>
+        <a href="https://wavebox.me/wave/9yprnt1ii7tatpb8/" target="_blank" rel="noopener noreferrer"><img width="100" height="40" alt="wavebox logo" src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/7ae13f9a38be4db3b40ac2166607885a/logo_symbol_black.png?fm=webp&w=100" /></a>
     </div>
     <!-- <GoogleResponsiveAd client:only="preact"/> -->
 </Layout>
