--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,7 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import '../styles/global.css';
+import { SITE_TITLE } from '../config';
 
 export interface Props {
 	title: string;
@@ -38,14 +39,14 @@ const { title, description, image = import.meta.env.CARD_IMAGE, robots = "index,
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
-<title>{title}</title>
-<meta name="title" content={title} />
+<title>{`${title}|${SITE_TITLE}`}</title>
+<meta name="title" content={`${title}|${SITE_TITLE}`} />
 <meta name="description" content={description} />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
-<meta property="og:title" content={title} />
+<meta property="og:title" content={`${title}|${SITE_TITLE}`} />
 <meta property="og:description" content={description} />
 <!-- <meta property="og:image" content={new URL(image, Astro.url)} /> -->
 <meta property="og:image" content={`${image}?fit=crop&crop=top&w=720&h=360`} />
@@ -53,7 +54,7 @@ const { title, description, image = import.meta.env.CARD_IMAGE, robots = "index,
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
-<meta property="twitter:title" content={title} />
+<meta property="twitter:title" content={`${title}|${SITE_TITLE}`} />
 <meta property="twitter:description" content={description} />
 <!-- <meta property="twitter:image" content={new URL(image, Astro.url)} /> -->
 <meta property="twitter:image" content={`${image}?fit=crop&crop=top&w=720&h=360`} />
