--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -22,7 +22,7 @@ const blog = await getBlogDetail(blogId as string);
 ---
 
 <Layout content={{
-    title: `${blog.title}|${SITE_TITLE}`,
+    title: blog.title,
     description: blog.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'').length > 100 ? blog.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'').slice(0,101) + '...' : blog.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,''),
     heroImage: blog.eyecatch && `${blog.eyecatch.url}?fm=webp&fit=crop&crop=top&w=720&h=360`,
     pubDate: new Date(blog.publishedAt).toLocaleString('ja-JP',{ timeZone: 'Asia/Tokyo' }),
