--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -5,7 +5,7 @@ const { posts } = Astro.props;
     {
         posts.map((post:any,index:number) => (
             <div class="post">
-                {post.eyecatch && (index === 0 || index === 1) ? <a href={`/posts/${post.id}`} aria-label="記事へ進む"><img width={720} height={360} src={`${post.eyecatch.url}?fm=webp&fit=crop&crop=top&w=720&h=360`} alt="" /></a> : post.eyecatch ? <a href={`/posts/${post.id}`} aria-label="記事へ進む"><img width={720} height={360} data-src={`${post.eyecatch.url}?fm=webp&fit=crop&crop=top&w=720&h=360`} alt="" class="lazyload"/></a> : null }
+                {post.eyecatch && (index === 0 || index === 1) ? <a href={`/posts/${post.id}/`} aria-label="記事へ進む"><img width={720} height={360} src={`${post.eyecatch.url}?fm=webp&fit=crop&crop=top&w=720&h=360`} alt="" /></a> : post.eyecatch ? <a href={`/posts/${post.id}`} aria-label="記事へ進む"><img width={720} height={360} data-src={`${post.eyecatch.url}?fm=webp&fit=crop&crop=top&w=720&h=360`} alt="" class="lazyload"/></a> : null }
                 <div class="spans">
                     <span class="published_time_span">
                         <time datetime={post.publishedAt}>
@@ -14,7 +14,7 @@ const { posts } = Astro.props;
                     </span>
                     {post.category && <span class="category"><a href={`/category/${post.category.id}`}>{post.category.name}</a></span>}
                 </div>
-                <a href={`/posts/${post.id}`}>
+                <a href={`/posts/${post.id}/`}>
                     <h2>{post.title}</h2>
                     <div class="description">{post.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'').length > 100 ? post.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'').slice(0,101) + '...' : post.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'')}</div>
                 </a>
