--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,6 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Sidebar from '../components/Sidebar.astro';
 import { SITE_TITLE } from '../config';
+import type { Blog } from '../library/microcms';
 
 export interface Props {
 	content: {
@@ -15,10 +16,14 @@ export interface Props {
 		categoryId: string;
 		categoryName: string;
 	};
+	newer?:Blog;
+	older?:Blog;
 }
 
 const {
 	content: { title, description, pubDate, updatedDate, heroImage, categoryId, categoryName },
+	newer,
+	older,
 } = Astro.props;
 ---
 
@@ -65,6 +70,13 @@ const {
 					Tweet
 				</a>
 				<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<nav class="newer_home_older">
+					<ul>
+						<li>{newer && <div class="newer"><a href={`/posts/${newer.id}/`}>{newer.title}</a><span>&#9665;</span></div>}</li>
+						<li><a href="/">Home</a></li>
+						<li>{older && <div class="older"><span>&#9655;</span><a href={`/posts/${older.id}/`}>{older.title}</a></div>}</li>
+					</ul>
+				</nav>
 			</article>
 		</main>
 		<Footer />
