--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -18,6 +18,14 @@ export async function getStaticPaths() {
 //記事の詳細情報を取得
 const { blogId } = Astro.params;
 const blog = await getBlogDetail(blogId as string);
+// 記事を発行日降順でIDとタイトルを取得
+const posts = await getBlogs({ fields: ["id","title"], orders:'-publishedAt' });
+// 現在の記事のpostsの中でのindex番号を取得
+const current_index = posts.contents.findIndex((post) => post.id === blogId);
+// 1つ新しい記事（ない場合null）
+const newer = posts.contents[current_index - 1] ?? null;
+// 1つ古い記事（ない場合null）
+const older = posts.contents[current_index + 1] ?? null;
 ---
 
 <Layout content={{
@@ -28,7 +36,7 @@ const blog = await getBlogDetail(blogId as string);
     updatedDate: new Date(blog.updatedAt).toLocaleString('ja-JP',{ timeZone: 'Asia/Tokyo' }),
     categoryId: blog.category.id ?? '',
     categoryName: blog.category.name ?? '',
-}}>
+}} newer={newer} older={older}>
     <!-- <GoogleResponsiveAd client:only="preact"/> -->
     <main set:html={processer(blog.content, { img: { parameters: { fm: 'webp' } } })} />
     <div id="wavebox" class="wavebox">
