--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -5,24 +5,35 @@ import type { Page } from "astro";
 export interface Props {
 	page: Page;
     adjacentPageNumber?: number;
+    categoryId?: string;
 }
 // propsからpageを取得（adjacentPageNumberの初期値は1）
-const { page, adjacentPageNumber = 1 } = Astro.props;
+const { page, adjacentPageNumber = 1, categoryId = null } = Astro.props;
 // ページ番号の配列を作成
 const pager = [...Array(page.lastPage).keys()].map((i) => ++i);
 // リンク先のパスを生成する関数
-const getPath = (page: number) => {
-  return `./${page}`;
+const getPath = (page?: number, cId?: string) => {
+  const path =　cId ? (page ? `./${cId}/${page}` : `./${cId}/`) : (page ? `./${page}` : `./`)
+  return path
+  //if (page) {
+  //    return `./${page}`;
+  //} else {
+  //    return `./`;
+  //}  
 };
 ---
 <nav aria-label="pagination">
   <ul>
     <!-- 前ページが存在する場合はPREVリンクを表示する -->
-    {page.url.prev && <li><a href={page.url.prev}>Prev</a></li>}
+    {page.url.prev ? <li><a href={page.url.prev}>Previous</a></li> : page.url.current === '' || page.url.current === `/category/${categoryId}` ? null : categoryId ? <li><a href={`/category/${categoryId}/`}>Previous</a></li> : <li><a href="/">Previous</a></li>}
     <!-- 現在ページが「隣接ページ数 + 1」を超える場合は先頭ページと...を表示する -->
     {adjacentPageNumber + 1 < page.currentPage &&
         <li>
-            <a href={getPath(1)}>
+            categoryId ?
+            <a href={getPath(cId=categoryId)}>
+            1
+            </a> :
+            <a href={getPath()}>
             1
             </a>
         </li>
@@ -30,15 +41,25 @@ const getPath = (page: number) => {
     }
     <!-- ページ番号の配列リストから「現在ページ +- 隣接ページ数」のページを表示する -->
     {pager.map((p) => (
-        //{page.currentPage - adjacentPageNumber <= p && p <= page.currentPage + adjacentPageNumber &&
-            {page.currentPage === p ? <li><span>{p}</span></li> : <li><a href={getPath(p)}>{p}</a></li>}
-        //}
+        page.currentPage - adjacentPageNumber <= p && p <= page.currentPage + adjacentPageNumber &&
+            (page.currentPage === p ?
+             <li><span>{p}</span></li> :
+             categoryId ?
+             (p ===　1 ?
+             <li><a href={getPath(cId=categoryId)}>{p}</a></li>:
+             <li><a href={getPath(page=p,cId=categoryId)}>{p}</a></li>):
+             (p ===　1 ?
+             <li><a href={getPath()}>{p}</a></li>:
+             <li><a href={getPath(page=p)}>{p}</a></li>)
+            )
     ))}
     <!-- 現在ページが「最終ページ - 隣接ページ数」の場合...と最終ページを表示する -->
     {page.currentPage < page.lastPage - adjacentPageNumber &&
         <li>&#8230;</li>
         <li>
-            <a href={getPath(page.lastPage)}>{page.lastPage}</a>
+            categoryId ?
+            <a href={getPath(page=page.lastPage,cId=categoryId)}>{page.lastPage}</a> :
+            <a href={getPath(page=page.lastPage)}>{page.lastPage}</a>
         </li>
     }
     <!-- 次ページが存在する場合はNEXTリンクを表示する -->
