--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,6 +1,5 @@
 ---
 import type { Page } from "astro";
-
 // PropsでpageとadjacentPageNumber（隣接するページを表示する数）を定義
 export interface Props {
 	page: Page;
@@ -12,8 +11,8 @@ const { page, adjacentPageNumber = 1, categoryId = null } = Astro.props;
 // ページ番号の配列を作成
 const pager = [...Array(page.lastPage).keys()].map((i) => ++i);
 // リンク先のパスを生成する関数
-const getPath = (page?: number, cId?: string) => {
-  const path =　cId ? (page ? `./${cId}/${page}` : `./${cId}/`) : (page ? `./${page}` : `./`)
+const getPath = (page:number, cId?:string) => {
+  const path = cId ? (page === 1 ? `/category/${cId}/` : `/category/${cId}/${page}`) : (page === 1 ? `/` : `/${page}`)
   return path
   //if (page) {
   //    return `./${page}`;
@@ -22,18 +21,14 @@ const getPath = (page?: number, cId?: string) => {
   //}  
 };
 ---
-<nav aria-label="pagination">
+<nav class="pagination">
   <ul>
     <!-- 前ページが存在する場合はPREVリンクを表示する -->
     {page.url.prev ? <li><a href={page.url.prev}>Previous</a></li> : page.url.current === '' || page.url.current === `/category/${categoryId}` ? null : categoryId ? <li><a href={`/category/${categoryId}/`}>Previous</a></li> : <li><a href="/">Previous</a></li>}
     <!-- 現在ページが「隣接ページ数 + 1」を超える場合は先頭ページと...を表示する -->
     {adjacentPageNumber + 1 < page.currentPage &&
         <li>
-            categoryId ?
-            <a href={getPath(cId=categoryId)}>
-            1
-            </a> :
-            <a href={getPath()}>
+            <a href={getPath(1,categoryId)}>
             1
             </a>
         </li>
@@ -44,22 +39,14 @@ const getPath = (page?: number, cId?: string) => {
         page.currentPage - adjacentPageNumber <= p && p <= page.currentPage + adjacentPageNumber &&
             (page.currentPage === p ?
              <li><span>{p}</span></li> :
-             categoryId ?
-             (p ===　1 ?
-             <li><a href={getPath(cId=categoryId)}>{p}</a></li>:
-             <li><a href={getPath(page=p,cId=categoryId)}>{p}</a></li>):
-             (p ===　1 ?
-             <li><a href={getPath()}>{p}</a></li>:
-             <li><a href={getPath(page=p)}>{p}</a></li>)
+             <li><a href={getPath(p,categoryId)}>{p}</a></li>
             )
     ))}
     <!-- 現在ページが「最終ページ - 隣接ページ数」の場合...と最終ページを表示する -->
     {page.currentPage < page.lastPage - adjacentPageNumber &&
         <li>&#8230;</li>
         <li>
-            categoryId ?
-            <a href={getPath(page=page.lastPage,cId=categoryId)}>{page.lastPage}</a> :
-            <a href={getPath(page=page.lastPage)}>{page.lastPage}</a>
+            <a href={getPath(page.lastPage,categoryId)}>{page.lastPage}</a>
         </li>
     }
     <!-- 次ページが存在する場合はNEXTリンクを表示する -->
