--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -6,6 +6,7 @@ import Sidebar from '../components/Sidebar.astro';
 import Posts from '../components/Posts.astro';
 import PreloadFirstPostEyecatch from '../components/PreloadFirstPostEyecatch.astro';
 import GoogleResponsiveAd from '../components/GoogleResponsiveAd';
+import Pagination from '../components/Pagination.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 
 //microCMS呼び出し
@@ -54,8 +55,9 @@ const { page } = Astro.props;
 			<Sidebar></Sidebar>
 			<section class="contents">
 				<Posts posts={page.data}/>
-				{page.url.prev ? <a href={page.url.prev}>Previous</a> : page.url.current === '' ? null : <a href="/">Previous</a>}
-				{page.url.next ? <a href={page.url.next}>Next</a> : null}
+				<!-- {page.url.prev ? <a href={page.url.prev}>Previous</a> : page.url.current === '' ? null : <a href="/">Previous</a>} -->
+				<!-- {page.url.next ? <a href={page.url.next}>Next</a> : null} -->
+                <Pagination page={page}/>
 				<!-- <GoogleResponsiveAd client:only="preact"/> -->
 			</section>
 		</main>
