add pagination [categoryId]/[...page].astro

--- a/src/pages/category/[categoryId]/[...page].astro
+++ b/src/pages/category/[categoryId]/[...page].astro
@@ -6,6 +6,7 @@ import Sidebar from '../../../components/Sidebar.astro';
 import Posts from '../../../components/Posts.astro';
 import PreloadFirstPostEyecatch from '../../../components/PreloadFirstPostEyecatch.astro';
 import GoogleResponsiveAd from '../../../components/GoogleResponsiveAd';
+import Pagination from '../../../components/Pagination.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../../config';
 
 //microCMS呼び出し
@@ -80,8 +81,9 @@ const category = await getCategoryDetail(params.categoryId as string);
 			<section class="contents">
 				<h1>{category.name}</h1>
 				<Posts posts={page.data}/>
-				{page.url.prev ? <a href={page.url.prev}>Previous</a> : null}
-				{page.url.next ? <a href={page.url.next}>Next</a> : null}
+				<!-- {page.url.prev ? <a href={page.url.prev}>Previous</a> : null} -->
+				<!-- {page.url.next ? <a href={page.url.next}>Next</a> : null} -->
+                <Pagination page={page} categoryId={params.categoryId}/>
 				<!-- <GoogleResponsiveAd client:only="preact"/> -->
 			</section>
 		</main>
