--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -275,6 +275,17 @@ a div.description {
   margin: 0 auto 0 0;
 }
 
+.pagination ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+
+.pagination ul li{
+  display: inline-block;
+  text-align: center;
+}
+
 @media screen and (min-width: 636px) {
   /*.nav-links {
     margin-left: 5em;
